@@ -32,22 +32,61 @@ CREArtifactPanel::CREArtifactPanel()
     myType = new QLineEdit(this);
     layout->addWidget(myType, 3, 2);
 
+    myViaAlchemy = new QCheckBox(tr("Can be made with alchemy"), this);
+    myViaAlchemy->setEnabled(false);
+    layout->addWidget(myViaAlchemy, 4, 1, 1, 2);
+
     myArchetypes = new QTreeWidget(this);
-    layout->addWidget(myArchetypes, 4, 1, 1, 2);
+    layout->addWidget(myArchetypes, 5, 1, 1, 2);
     myArchetypes->setHeaderLabel("Allowed/forbidden archetypes");
     myArchetypes->setIconSize(QSize(32, 32));
     myArchetypes->setRootIsDecorated(false);
 
-    layout->addWidget(new QLabel(tr("Values:"), this), 5, 1, 1, 2);
+    layout->addWidget(new QLabel(tr("Values:"), this), 6, 1, 1, 2);
     myValues = new QTextEdit(this);
-    layout->addWidget(myValues, 6, 1, 1, 2);
+    layout->addWidget(myValues, 7, 1, 1, 2);
 
-    layout->addWidget(new QLabel(tr("Display result item for:"), this), 7, 1);
+    layout->addWidget(new QLabel(tr("Display result item for:"), this), 8, 1);
     myDisplay = new QComboBox(this);
-    layout->addWidget(myDisplay, 7, 2);
+    layout->addWidget(myDisplay, 8, 2);
     myInstance = new QTextEdit(this);
-    layout->addWidget(myInstance, 8, 1, 1, 2);
+    layout->addWidget(myInstance, 9, 1, 1, 2);
     connect(myDisplay, SIGNAL(currentIndexChanged(int)), this, SLOT(displayArchetypeChanged(int)));
+}
+
+bool CREArtifactPanel::madeViaAlchemy(const artifact* artifact) const
+{
+    Q_ASSERT(artifact != NULL);
+
+    const recipelist* list;
+    const recipe* recipe;
+    const archetype* arch;
+
+    for (int ing = 1; ; ing++)
+    {
+        list = get_formulalist(ing);
+        if (!list)
+            break;
+        for (recipe = list->items; recipe; recipe = recipe->next)
+        {
+            if (recipe->title == NULL)
+                continue;
+
+            if (strcmp(recipe->title, artifact->item->name) != 0)
+                continue;
+
+            for (size_t a = 0; a < recipe->arch_names; a++)
+            {
+                arch = find_archetype(recipe->arch_name[a]);
+                if (!arch)
+                    continue;
+                if (arch->clone.type == artifact->item->type)
+                    return true;
+            }
+        }
+    }
+
+    return false;
 }
 
 void CREArtifactPanel::setArtifact(const artifact* artifact)
@@ -58,6 +97,8 @@ void CREArtifactPanel::setArtifact(const artifact* artifact)
     myName->setText(artifact->item->name);
     myChance->setText(QString::number(artifact->chance));
     myType->setText(QString::number(artifact->item->type));
+
+    myViaAlchemy->setChecked(madeViaAlchemy(artifact));
 
     const archt* arch;
     const char* name;
